# kadode_fine_tuning

./: .gitignore  00_environmentResult.md  01_learnResult.md  02_localMemo.md  LICENSE  README.md
fine-tuning-rinnna-to-infer-title/: .gitignore  README.md  pyproject.toml
fine-tuning-rinnna-to-infer-title/data/: README.md
fine-tuning-rinnna-to-infer-title/inputData/: README.md
fine-tuning-rinnna-to-infer-title/src/: convertkadodeCsvToTrainData.py  convertkadodeCsvToTrainDataWithDate.py  main.py  run_clm.py  test_rinna.py  useCreatedModel.py
fine-tuning-rinnna-to-infer-title/trainData/: README.md
