[tool.poetry]
name = "fine-tuning-rinnna-to-infer-title"
version = "0.1.0"
description = ""
authors = ["Usuyuki"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = {git = "https://github.com/huggingface/transformers"}
torch = [
    {url="https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp310-cp310-linux_x86_64.whl",markers = "sys_platform == 'linux'"},
    {version="^1.12.1",markers = "sys_platform == 'darwin'"}]
torchvision = [
    {url="https://download.pytorch.org/whl/cu116/torchvision-0.13.1%2Bcu116-cp310-cp310-linux_x86_64.whl",markers = "sys_platform == 'linux'"},
    {version="^0.13.1",markers = "sys_platform == 'darwin'"}]
torchaudio = [
    {url="https://download.pytorch.org/whl/cu116/torchaudio-0.12.1%2Bcu116-cp310-cp310-linux_x86_64.whl",markers = "sys_platform == 'linux'"},
    {version="^0.12.1",markers = "sys_platform == 'darwin'"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
