[tool.poetry]
name = "fine-tuning-rinnna-to-infer-title"
version = "0.1.0"
description = ""
authors = ["Usuyuki"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = {git = "https://github.com/huggingface/transformers"}
torch = "^1.12.1"
torchvision = "^0.13.1"
torchaudio = "^0.12.1"
sentencepiece = "^0.1.97"
datasets = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
